# task_app

./: app.py  pyproject.toml
api/: main.py
api/cruds/: task.py
api/routers/: task.py
tests/: test_main.py
