[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []
package-mode = false  # ðŸ“¦ ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸åŒ–ã‚’ç„¡åŠ¹åŒ–ï¼ˆStreamlit Cloudå‘ã‘ï¼‰

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0.41"
aiomysql = "^0.2.0"
streamlit = "^1.35.0"  # âœ… Streamlit Cloudã§å¿…é ˆ

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
